[gd_scene load_steps=11 format=3 uid="uid://e4kkoc4rtn5"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_3gpa6"]
[ext_resource type="Theme" uid="uid://5gr038ghhdfr" path="res://Fonts/theme.tres" id="2_m6chw"]
[ext_resource type="Texture2D" uid="uid://qt7ml45ljugj" path="res://Sprites/logo.png" id="3_wk4cr"]
[ext_resource type="Texture2D" uid="uid://cssshqa35r6rj" path="res://Sprites/back_arrow.png" id="4_2b0ye"]
[ext_resource type="Script" path="res://Scenes/Back.gd" id="5_noop5"]
[ext_resource type="PackedScene" uid="uid://dqsh0fi036trd" path="res://Objects/fade.tscn" id="7_qh125"]
[ext_resource type="AudioStream" uid="uid://cxjb1jdnptl3w" path="res://Sounds/Music/title_screen.wav" id="8_susgi"]
[ext_resource type="Script" path="res://Scripts/fade_in.gd" id="9_5jt74"]
[ext_resource type="Texture2D" uid="uid://bwew5mmy0ws1i" path="res://Sprites/city_background_1.png" id="10_ykxbx"]
[ext_resource type="Texture2D" uid="uid://1cs1v51ynm3" path="res://Sprites/city_background_2.png" id="11_wcfvo"]

[node name="main_menu" type="Node2D"]

[node name="Main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_3gpa6")

[node name="Play" type="Button" parent="Main"]
layout_mode = 0
offset_left = 709.0
offset_top = 432.0
offset_right = 1201.0
offset_bottom = 542.0
theme = ExtResource("2_m6chw")
theme_override_font_sizes/font_size = 80
text = "Play"

[node name="Options" type="Button" parent="Main"]
layout_mode = 0
offset_left = 709.0
offset_top = 562.0
offset_right = 1201.0
offset_bottom = 672.0
theme = ExtResource("2_m6chw")
theme_override_font_sizes/font_size = 80
text = "Options"

[node name="Credits" type="Button" parent="Main"]
layout_mode = 0
offset_left = 710.0
offset_top = 686.0
offset_right = 1202.0
offset_bottom = 796.0
theme = ExtResource("2_m6chw")
theme_override_font_sizes/font_size = 80
text = "Credits
"

[node name="Quit" type="Button" parent="Main"]
layout_mode = 0
offset_left = 710.0
offset_top = 813.0
offset_right = 1202.0
offset_bottom = 923.0
theme = ExtResource("2_m6chw")
theme_override_font_sizes/font_size = 80
text = "Quit
"

[node name="Logo" type="Sprite2D" parent="Main"]
texture_filter = 1
position = Vector2(961, 227)
scale = Vector2(10, 10)
texture = ExtResource("3_wk4cr")

[node name="Back2" type="Button" parent="Main" node_paths=PackedStringArray("show")]
texture_filter = 1
layout_mode = 0
offset_left = 361.0
offset_top = 383.0
offset_right = 401.0
offset_bottom = 423.0
scale = Vector2(3, 3)
icon = ExtResource("4_2b0ye")
icon_alignment = 1
script = ExtResource("5_noop5")
show = NodePath("..")

[node name="fade" parent="." instance=ExtResource("7_qh125")]
offset_left = -658.0
offset_top = -244.0
offset_right = 2342.0
offset_bottom = 1256.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_susgi")
autoplay = true
bus = &"Music"
script = ExtResource("9_5jt74")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -100
offset_left = -38.0
offset_top = 31.0
offset_right = 986.0
offset_bottom = 1055.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("10_ykxbx")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.478431)
z_index = -101
offset_left = 16.0
offset_top = -95.0
offset_right = 1040.0
offset_bottom = 929.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("11_wcfvo")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1000
offset_left = -931.0
offset_top = -264.0
offset_right = 3069.0
offset_bottom = 1736.0
mouse_filter = 2
color = Color(0.368627, 0.462745, 0.458824, 1)

[connection signal="pressed" from="Main/Play" to="Main" method="_on_play_pressed"]
[connection signal="pressed" from="Main/Play" to="Main" method="_on_button_pressed"]
[connection signal="pressed" from="Main/Options" to="Main" method="_on_options_pressed"]
[connection signal="pressed" from="Main/Credits" to="Main" method="_on_credits_pressed"]
[connection signal="pressed" from="Main/Quit" to="Main" method="_on_quit_pressed"]
[connection signal="pressed" from="Main/Back2" to="Main/Back2" method="_on_pressed"]
